<resources>
    <string name="app_name">FlixFlex</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="you_do_not_have_an_account">You do not have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="profil">Profil</string>
    <string name="search">Search</string>
    <string name="flixflex">FlixFlex</string>
    <string name="top_rated">Top rated</string>
    <string name="no_content_found">No content found</string>
    <string name="no_internet_available">No internet available</string>
    <string name="recommandation">Recommandation</string>
    <string name="bullet">•</string>
    <string name="cast">Cast</string>
    <string name="similar_movies">Similar movies</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="vimeo_is_not_installed">Vimeo is not installed</string>
    <string name="oops_an_error_has_occurred">Oops, An error has occurred</string>
    <string name="flixflexsharedpref">FlixFlexSharedPref</string>
    <string name="similar_series">Similar series</string>
    <string name="movies_found">Movies found</string>
    <string name="series_found">Series found</string>
    <string name="please_wait">Please wait</string>
    <string name="search_for_your_movies_and_series">Search for your movies and series</string>
    <string name="change_your_email">Change your Email</string>
    <string name="change_your_password">Change your password</string>
    <string name="log_out">Log out</string>
    <string name="welcome_to_flixflex">Welcome to FlixFlex</string>
    <string name="current_email">Current email</string>
    <string name="new_email">New Email</string>
    <string name="update">Update</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="wrong_email_or_password">Wrong Email or Password</string>
    <string name="empty_password">Empty password</string>
    <string name="empty_email">Empty email</string>
    <string name="login_success">login success</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="password_must_contains">Password must contains at least 8 Caracters and digits</string>
    <string name="season_s">" Season(s) "</string>
    <string name="episodes">" Episodes "</string>
</resources>