<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/search_fragment_scene">

    <!--Start Header -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_15"
            android:imeOptions="actionDone"
            android:singleLine="true"
            app:boxBackgroundColor="@color/black"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:placeholderText="@string/search"
            app:placeholderTextColor="@color/white_gray"
            app:startIconDrawable="@drawable/ic_search"
            app:startIconTint="@color/white_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:padding="0dp"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <!--End Header -->

    <androidx.core.widget.NestedScrollView
        android:id="@+id/idNSV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/searchIllustrator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/search_for_your_movies_and_series"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@id/imageIllustrator"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/imageIllustrator"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="140dp"
                    android:src="@drawable/ic_search_illustator"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <!--Start Movies -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/moviesMotionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/moviesLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/movies_found"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/moviesRecyclerview"
                            android:layout_width="0dp"
                            android:layout_height="260dp"
                            android:layout_weight="1" />

                        <ProgressBar
                            android:id="@+id/idPBLoadingMovies"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:indeterminateTint="@color/thirdColor"
                            android:visibility="gone" />

                    </LinearLayout>

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/moviesshimmerViewContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <include layout="@layout/item_movie" />

                            <include layout="@layout/item_movie" />
                        </LinearLayout>
                    </com.facebook.shimmer.ShimmerFrameLayout>

                    <include
                        android:id="@+id/no_content_layout_movies"
                        layout="@layout/no_content_layout"
                        android:visibility="gone" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--End Movies -->

            <!--Start Series -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/seriesMotionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/seriesLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/series_found"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/seriesRecyclerview"
                            android:layout_width="0dp"
                            android:layout_height="260dp"
                            android:layout_weight="1" />

                        <ProgressBar
                            android:id="@+id/idPBLoadingSeries"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:indeterminateTint="@color/thirdColor"
                            android:visibility="gone" />

                    </LinearLayout>

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/seriesshimmerViewContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <include layout="@layout/item_movie" />

                            <include layout="@layout/item_movie" />
                        </LinearLayout>
                    </com.facebook.shimmer.ShimmerFrameLayout>

                    <include
                        android:id="@+id/no_content_layout_series"
                        layout="@layout/no_content_layout"
                        android:visibility="gone" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--Start Series -->

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.motion.widget.MotionLayout>